# sample-doc

./: .coverage  .env.local.example  .gitignore  CONTRIBUTING.md  README.md
.agent/plan/: portfolio_plan.md
.agent/prompt/: init_portfolio.md
.github/workflows/: docs-ci.yml  docs-release.yml
docs/: fumadocs.config.ts  middleware.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  source.config.ts  tailwind.config.js  tsconfig.json
docs/.source/: index.ts  source.config.mjs
docs/app/: globals.css  layout.js  page.js
docs/components/: docs-command-menu.js  docs-navigation.js  docs-toc.js  html-lang.js  landing-page.js  locale-select.js  mdx-code-block.js  mdx.js  playground.js  (+1 more)
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
nano-llm-engine/: .env.local.example  .gitignore  CONTRIBUTING.md  README.md  mypy.ini  plan.md
nano-llm-engine/sdk/: pyproject.toml
nano-llm-engine/sdk/nano_llm/: __init__.py  config.py  engine.py
nano-llm-engine/sdk/tests/: test_engine.py
scripts/: bundle_sdk_for_playground.py  generate_api.py  translate_docs.py  validate_playgrounds.py  validate_snippets.py
sdk/: README_SDK.md  pyproject.toml  setup.py
sdk-rs/: Cargo.toml  README.md
sdk/nano_llm/: __init__.py  config.py  device.py  engine.py  errors.py
sdk/raykim_llm/: __init__.py  config.py  device.py  engine.py  errors.py
sdk/tests/: test_engine.py
(+68 files in other folders)
