[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-rust>=1.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-llm-engine"
version = "1.0.0"
description = "Mock LLM inference SDK for docs-as-code portfolio"
readme = "README_SDK.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "griffe>=1.0.0",
  "setuptools-rust>=1.9.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nano_llm*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = [
  "setup.py",
]
